# youtube-analytics-project

./: pyproject.toml
helper/: youtube_api_manual.py
homework-2/: vdud.json
homework-3/: main.py
src/: channel.py  playlist.py  video.py
